Fix racy debug assertion in hoistSingleDocTransformBeforeStage

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 9.0.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Query Optimization
    • Fully Compatible
    • ALL
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The pre-condition checks a query knob (internalQueryTransformHoistPolicy) which is reset in some tests while concurrent operations are running (CheckMetadataConsistencyInBackground).

      This causes the debug check to fail sometimes.

      If the precondition passed, we can proceed with it even if the knob value changed.

      The easiest fix is to remove the dassert at this point, to avoid the race. The remainder of the code is safe to execute regardless of the value of the knob.

       

            Assignee:
            Vesko Karaganev
            Reporter:
            Vesko Karaganev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: