SERVER-126974 Fix racy debug assertion in hoistSingleDocTransformBeforeStage (#53926)

GitOrigin-RevId: 5ec08a0205c1f0670fe743965e48413f93cba24b